--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <div class="card-buttons">
               <a
-                href="https://effulgent-snickerdoodle-eb699d.netlify.app/"
+                href="https://crypto50.netlify.app/"
                 target="_blank"
                 class="card-button--site"
                 >Site</a
