--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         <div class="flex-between">
           <h2>Take a look at my projects</h2>
 
-          <a href="https://www.github.com/" class="projects-link flex-between">
+          <a
+            href="https://www.github.com/Tommy15101"
+            class="projects-link flex-between"
+          >
             See all works
             <img
               src="./img/ArrowUpRight.svg"
@@ -332,22 +335,28 @@
 
           <ul class="flex-list list-items-circle">
             <li>
-              <a href="https://www.linkedin.com/">
+              <a
+                href="https://www.linkedin.com/in/thomas-atkins-38b28a1b2/"
+                target="_blank"
+              >
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.github.com/">
+              <a href="https://www.github.com/Tommy15101" target="_blank">
                 <i class="fab fa-github"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.twitter.com/">
+              <a href="https://twitter.com/BlockchainVeins" target="_blank">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.facebook.com/">
+              <a
+                href="https://www.facebook.com/tommy.atkins.16"
+                target="_blank"
+              >
                 <i class="fab fa-facebook"></i>
               </a>
             </li>
@@ -368,7 +377,9 @@
           <li>0411 481 006</li>
           <hr />
           <li>
-            <a href="mailto: name@email.com">thomas.robert.atkins@gmail.com</a>
+            <a href="mailto: thomas.robert.atkins@gmail.com"
+              >thomas.robert.atkins@gmail.com</a
+            >
           </li>
         </ul>
       </section>
